# penguins

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  pyproject.toml
docker/: Dockerfile
notebooks/: eval_model.yaml  penguin-pipeline-docker.ipynb  penguin-pipeline.ipynb  penguin-train.ipynb  penguins-2.ipynb  penguins.ipynb  pipeline.json  query.yaml  run-interactive.ipynb  run-local.ipynb  test.ipynb  vertex-pipeline.ipynb  vertex-training-job.ipynb
src/penguin_model/: cli.py  model.py  preprocessing.py
tests/: test_pinguin_model.py
