[tool.poetry]
name = "penguin-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scikit-learn = "^1.0.1"
typer = "^0.4.0"
google-cloud-bigquery = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
penguin-model = 'penguin_model.cli:app'
