[tool.poetry]
name = "penguin-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scikit-learn = "0.24.*"
typer = "^0.4.0"
google-cloud-bigquery = "^2.28.1"
pandas = "^1.3.4"
pyarrow = "^6.0.0"
google-cloud-storage = "^1.42.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.4.2"
pylint = "^2.11.1"
black = {extras = ["jupyter"], version = "^21.10b0"}
pre-commit = "^2.15.0"
google-cloud-aiplatform = "^1.6.2"
kfp = "^1.8.9"
google-cloud-pipeline-components = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
penguin-model = 'penguin_model.cli:app'
